Fixed Overflow Issue, added scrolling

--- a/MegaDesk3/wwwroot/css/site.css
+++ b/MegaDesk3/wwwroot/css/site.css
@@ -95,6 +95,7 @@ main {
     max-width: 900px;
     margin: 0 auto;
     height: calc(100vh - 120px);
+    overflow-y: auto;
 }
 
 /*Index styles*/
